#884 - complete sql lite tests